-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.11.0
-
54cd881a400b66bc7abfb57a732ef35633819e83 (qt-creator/qt-creator/master)
For example a new CMake project created in Qt Creator would have by default "Enable QML" enabled in debugger settings (Projects > run > debugger settings) however Qml debugging doesn't work until the checkbox is first unchecked and checked again.
Steps to reproduce:
- Create a new qt quick template project. Select CMake as the build system
- Attempt to debug QML (=> should fail)
- Uncheck "Enable QML" and check it again
- Attempt to debug QML (=> should succeed)