src/plugins/cmakeprojectmanager/cmakebuildconfiguration.h
@@ -46,6 +46,11 @@ class CMakeBuildConfiguration final : public ProjectExplorer::BuildConfiguration
 {
     Q_OBJECT
 
+    // used in DebuggerRunConfigurationAspect
+    Q_PROPERTY(bool linkQmlDebuggingLibrary
+               READ isQmlDebuggingEnabled
+               NOTIFY configurationForCMakeChanged)
+
     friend class ProjectExplorer::BuildConfigurationFactory;
     CMakeBuildConfiguration(ProjectExplorer::Target *target, Core::Id id);
     ~CMakeBuildConfiguration() final;
@@ -92,6 +97,8 @@ private:
 
     void setError(const QString &message);
     void setWarning(const QString &message);
+
+    bool isQmlDebuggingEnabled() const;
 
     CMakeConfig m_configurationForCMake;
     CMakeConfig m_initialConfiguration;
